--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -1,4 +1,4 @@
-name: Mobile + Release
+name: Mobile
 on: workflow_dispatch
 jobs:
   Android:
@@ -35,7 +35,7 @@ jobs:
           haxelib run lime config ANDROID_SETUP true
 
       - name: Compile
-        run: haxelib run lime build android -D officialBuild -D ${{ matrix.storage-type }} -final
+        run: haxelib run lime build android -D ${{ matrix.storage-type }} -final
         env:
           cert_pass: nullfunni
           cert_alias_pass: nullfunni
@@ -63,6 +63,7 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hmm --quiet
           haxelib run hmm install --quiet
+          # haxelib run lime rebuild extension-iostools ios -arm64 -final
 
       # - name: Install MobileVLCKit Framework
         # run: |
@@ -71,7 +72,7 @@ jobs:
           # tar -xf MobileVLCKit-3.5.1-34408b84-e9eceaed.tar.xz
 
       - name: Compile
-        run: haxelib run lime build ios -D NOVIDEO -D officialBuild -final
+        run: haxelib run lime build ios -D NOVIDEO -final
 
       # - name: Check Code Signing
         # run: cd export/release/ios/build/Release-iphoneos && codesign -dv *.app
@@ -83,72 +84,10 @@ jobs:
           mv *.app Payload
           zip -r PsychEngine.ipa Payload
 
-      - name: Make Zip For Release
-        run: |
-           cd export/release/ios/build/Release-iphoneos
-           zip PsychEngine-iOS.zip PsychEngine.ipa
-
       - name: Upload Artifact
         if: ${{ success() }}
         uses: actions/upload-artifact@main
         with:
           name: iOSBuild
-          path: export/release/ios/build/Release-iphoneos/*.zip
+          path: export/release/ios/build/Release-iphoneos/*.ipa
           if-no-files-found: error
-  Releaser:
-    needs: [Android, iOS]
-    runs-on: ubuntu-latest
-    permissions: write-all
-    steps:
-      - name: Download EXTERNAL Build
-        uses: actions/download-artifact@main
-        with:
-           name: androidBuild-EXTERNAL
-           path: /home/runner
-
-      - name: Move EXTERNAL File
-        run: mv /home/runner/PsychEngine-release.apk /home/runner/PsychEngine-EXTERNAL.apk
-
-      - name: Download OBB Build
-        uses: actions/download-artifact@main
-        with:
-           name: androidBuild-OBB
-           path: /home/runner
-
-      - name: Move OBB File
-        run: mv /home/runner/PsychEngine-release.apk /home/runner/PsychEngine-OBB.apk
-
-      - name: Download DATA Build
-        uses: actions/download-artifact@main
-        with:
-           name: androidBuild-DATA
-           path: /home/runner
-
-      - name: Move DATA File
-        run: mv /home/runner/PsychEngine-release.apk /home/runner/PsychEngine-DATA.apk
-
-      - name: Download MEDIA Build
-        uses: actions/download-artifact@main
-        with:
-           name: androidBuild-MEDIA
-           path: /home/runner
-
-      - name: Move MEDIA File
-        run: mv /home/runner/PsychEngine-release.apk /home/runner/PsychEngine-MEDIA.apk
-
-      - name: Download iOS Build
-        uses: actions/download-artifact@main
-        with:
-           name: iOSBuild
-           path: /home/runner
-
-      - name: Publish The Release
-        uses: marvinpinto/action-automatic-releases@latest
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
-          automatic_release_tag: "0.7.3"
-          title: "0.7.3"
-          files: |
-            /home/runner/*.apk
-            /home/runner/*.zip
