--- a/.github/ISSUE_TEMPLATE/help.yml
+++ b/.github/ISSUE_TEMPLATE/help.yml
@@ -27,11 +27,12 @@ body:
       label: "What is your build target?"
       options:
         - "Desktop (Linux, Windows or Mac)"
+        - "Emscripten"
         - "Android"
         - "iOS"
         - "HashLink"
         - "Flash/AIR"
-        - "Other/Unknown/I don't know"
+        - "Unknown/I don't know"
     validations:
       required: true
 
