--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -2,10 +2,7 @@ name: Mobile
 on: workflow_dispatch
 jobs:
   Android:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        storage-type: [EXTERNAL, OBB, DATA, MEDIA]
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@main
@@ -19,7 +16,7 @@ jobs:
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
-          haxe-version: latest
+          haxe-version: 4.3.2
 
       - name: Install Libraries
         run: |
@@ -35,7 +32,7 @@ jobs:
           haxelib run lime config ANDROID_SETUP true
 
       - name: Compile
-        run: haxelib run lime build android -D ${{ matrix.storage-type }} -final
+        run: haxelib run lime build android -final
         env:
           cert_pass: nullfunni
           cert_alias_pass: nullfunni
@@ -44,7 +41,7 @@ jobs:
         if: ${{ success() }}
         uses: actions/upload-artifact@main
         with:
-          name: androidBuild-${{ matrix.storage-type }}
+          name: androidBuild
           path: export/release/android/bin/app/build/outputs/apk/release/*.apk
           if-no-files-found: error
   iOS:
@@ -56,7 +53,7 @@ jobs:
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
-          haxe-version: latest
+          haxe-version: 4.3.2
 
       - name: Install Libraries
         run: |
@@ -72,7 +69,7 @@ jobs:
           # tar -xf MobileVLCKit-3.5.1-34408b84-e9eceaed.tar.xz
 
       - name: Compile
-        run: haxelib run lime build ios -D NOVIDEO -final
+        run: haxelib run lime build ios -arm64 -final
 
       # - name: Check Code Signing
         # run: cd export/release/ios/build/Release-iphoneos && codesign -dv *.app
