--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -23,6 +23,7 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hmm --quiet
           haxelib run hmm install --quiet
+          haxelib run lime setup android --quiet
           haxelib run lime rebuild hxcpp android --quiet
 
       - name: Configure Android
@@ -61,6 +62,7 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hmm --quiet
           haxelib run hmm install --quiet
+          haxelib run lime setup ios --quiet
           haxelib run lime rebuild hxcpp ios --quiet
           # haxelib run lime rebuild extension-iostools ios -arm64 -final
 
