--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -61,20 +61,20 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hmm --quiet
           haxelib run hmm install --quiet
-          haxelib run lime rebuild hxcpp -nosign --quiet
-          # haxelib run lime rebuild extension-iostools ios -arm64 -final
+          haxelib run lime rebuild hxcpp --quiet
+          haxelib run lime rebuild hx-ios-uikit -arm64 -final
 
-      # - name: Install MobileVLCKit Framework
-        # run: |
-          # cd ${{ github.workspace }}/..
-          # wget -q https://download.videolan.org/cocoapods/prod/MobileVLCKit-3.5.1-34408b84-e9eceaed.tar.xz
-          # tar -xf MobileVLCKit-3.5.1-34408b84-e9eceaed.tar.xz
+       - name: Install MobileVLCKit Framework
+         run: |
+           cd ${{ github.workspace }}/..
+           wget -q https://download.videolan.org/cocoapods/prod/MobileVLCKit-3.5.1-34408b84-e9eceaed.tar.xz
+           tar -xf MobileVLCKit-3.5.1-34408b84-e9eceaed.tar.xz
 
       - name: Compile
         run: haxelib run lime build ios -final -Darm64 -Dno-armv7
 
-      # - name: Check Code Signing
-        # run: cd export/release/ios/build/Release-iphoneos && codesign -dv *.app
+       - name: Check Code Signing
+         run: cd export/release/ios/build/Release-iphoneos && codesign -dv *.app
 
       - name: Make Ipa
         run: |
