--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -46,7 +46,7 @@ jobs:
           path: export/release/android/bin/app/build/outputs/apk/release/*.apk
           if-no-files-found: error
   iOS:
-    runs-on: macos-13
+    runs-on: [self-hosted, macos]
     steps:
       - name: Checkout
         uses: actions/checkout@main
